--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,5 +17,13 @@
     "express": "^4.19.2",
     "mongodb": "^6.6.0",
     "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "eslint": "^9.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.1.0",
+    "prettier": "^3.2.5"
   }
 }
